@startuml

title __STRUCTURE's Class Diagram__\n

  namespace de.haw {
    namespace gui {
      namespace structure {
        class de.haw.gui.structure.Anchor {
            - color : Paint
            - selectedProperty : BooleanProperty
            - usedProperty : BooleanProperty
            - white : Paint
            + Anchor()
            + equals()
            + getTurtle()
            + hashCode()
            + init()
            + isSelected()
            + isUsed()
            + neglect()
            + select()
            + toString()
            + unselect()
            + use()
            + usedProperty()
        }
      }
    }
  }
  

  namespace de.haw {
    namespace gui {
      namespace structure {
        class de.haw.gui.structure.BranchingStructurePane {
            {static} - LOGGER : Logger
            - handler : EventHandler<MouseEvent>
            - initialized : boolean
            + BranchingStructurePane()
            + init()
            + setClickable()
            + updateTurte()
        }
      }
    }
  }
  

  namespace de.haw {
    namespace gui {
      namespace structure {
        class de.haw.gui.structure.Property {
            - name : StringProperty
            - value : StringProperty
            + Property()
            + getName()
            + getValue()
            + nameProperty()
            + setName()
            + setValue()
            + valueProperty()
        }
      }
    }
  }
  

  de.haw.gui.structure.Anchor .up.|> de.haw.gui.Selectable
  de.haw.gui.structure.Anchor -up-|> javafx.scene.shape.Circle
  de.haw.gui.structure.Anchor o-- de.haw.gui.turtle.Turtle : turtle
  de.haw.gui.structure.BranchingStructurePane -up-|> de.haw.gui.template.TurtleGraphic


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
